# composing-wasm-components

./: README.md
composing-components/: README.md
composing-components/orchestrator/: Cargo.toml
composing-components/orchestrator/src/: bindings.rs  lib.rs
composing-components/orchestrator/wit/: world.wit
composing-components/string-processor/: Cargo.toml
composing-components/string-processor/src/: bindings.rs  lib.rs
composing-components/string-processor/wit/: world.wit
geolocation/: README.md
geolocation/command/: Cargo.toml
geolocation/coordinate-normalizer/: Cargo.toml
geolocation/coordinate-normalizer/src/: bindings.rs  lib.rs
geolocation/coordinate-normalizer/wit/: world.wit
geolocation/dms-converter/: Cargo.toml
geolocation/dms-converter/src/: bindings.rs  lib.rs
geolocation/dms-converter/wit/: world.wit
geolocation/wit/coordinate_display/: world.wit
geolocation/wit/coordinate_normalizer/: world.wit
geolocation/wit/dms_converter/: world.wit
