[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "docs:orchestrator"

[package.metadata.component.target.dependencies]
"docs:string-processor" = { path = "/Users/tpmccallum/deleteme/string-processor" }